--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <main class="container">
         <div class="stats">
-            <span>📊 共 2 篇文章</span>
-            <span>🕐 最后更新: 2026-02-05 03:56</span>
+            <span>📊 共 3 篇文章</span>
+            <span>🕐 最后更新: 2026-02-05 04:23</span>
         </div>
 
         <div class="articles">
@@ -45,6 +45,17 @@
                 </div>
 
                 <p class="description">If n is a positive integer, then rounding Γ(1/n) up to the nearest integer gives n. In symbols, We an illustrate this with the following Python code. &#62;&#62;&#62; from scipy.special import gamma &#...</p>
+
+            </article>
+
+            <article class="article-card">
+                <div class="article-header">
+                    <span class="article-number">3</span>
+                    <h2><a href="https://utcc.utoronto.ca/~cks/cspace-gen-http429.html" target="_blank" rel="noopener">Your feed reader is fetching from a limited network area</a></h2>
+                </div>
+                <div class="article-meta">
+                    <span class="source">📝  Wandering Thoughts: Your feed reader is fetching from a limited network area </span>
+                </div>
 
             </article>
 
